--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <div class="">
       <h2>BECOME A TRADING ASSASSIN</h2>
       <h4>Learn To Win</h4>
-      <p>We believe that at trading education should empower traders
-          to think independentyl. We strive to achieve this by providing
+      <p>We believe that a trading education should empower traders
+          to think independently. We strive to achieve this by providing
           personalied training via live training webinars, trade ideas with
            detailed explanantions, and unparalled access to our head traders.
            We provide training and trade ideas for Day, Swing, and Options trading.
